Migrate to new csproj format, target netstandard2.0

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -42,8 +42,8 @@ build_script:
   # Build Flame.
   - msbuild /p:Configuration=Release /verbosity:quiet /nologo src/Flame.sln
   # Run the tests.
-  - src\UnitTests\bin\Release\UnitTests.exe -h
-  - src\UnitTests\bin\Release\UnitTests.exe all
+  - src\UnitTests\bin\Release\net45\UnitTests.exe -h
+  - src\UnitTests\bin\Release\net45\UnitTests.exe all
 
 after_build:
   # Create NuGet packages
