--- a/src/Flame.Clr.nuspec
+++ b/src/Flame.Clr.nuspec
@@ -27,7 +27,9 @@
   </metadata>
   <files>
     <file src="..\README.md" target="readme.txt" />
-    <file src="Flame.Clr\bin\Release\Flame.Clr.dll" target="lib\net45\" />
-    <file src="Flame.Clr\bin\Release\Flame.Clr.xml" target="lib\net45\" />
+    <file src="Flame.Clr\bin\Release\net45\Flame.Clr.dll" target="lib\net45\" />
+    <file src="Flame.Clr\bin\Release\netstandard2.0\Flame.Clr.dll" target="lib\netstandard2.0\" />
+    <file src="Flame.Clr\bin\Release\net45\Flame.Clr.xml" target="lib\net45\" />
+    <file src="Flame.Clr\bin\Release\netstandard2.0\Flame.Clr.xml" target="lib\netstandard2.0\" />
   </files>
 </package>
