--- a/src/Flame.Clr/Flame.Clr.csproj
+++ b/src/Flame.Clr/Flame.Clr.csproj
@@ -1,13 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A3C06AF7-D50A-4DA2-BD47-B0BA80CF2B74}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>Flame.Clr</RootNamespace>
     <AssemblyName>Flame.Clr</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <Version>1.0</Version>
+    <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -17,83 +16,21 @@
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\Flame.Clr.xml</DocumentationFile>
     <ConsolePause>false</ConsolePause>
+    <DocumentationFile>bin\Debug\Flame.Clr.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\Flame.Clr.xml</DocumentationFile>
     <ConsolePause>false</ConsolePause>
+    <DocumentationFile>bin\Release\Flame.Clr.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Numerics" />
-    <Reference Include="System.Collections.Immutable">
-      <HintPath>..\packages\System.Collections.Immutable.1.5.0\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
-    </Reference>
-    <Reference Include="Mono.Cecil">
-      <HintPath>..\packages\Mono.Cecil.0.10.4\lib\net40\Mono.Cecil.dll</HintPath>
-    </Reference>
-    <Reference Include="Mono.Cecil.Mdb">
-      <HintPath>..\packages\Mono.Cecil.0.10.4\lib\net40\Mono.Cecil.Mdb.dll</HintPath>
-    </Reference>
-    <Reference Include="Mono.Cecil.Pdb">
-      <HintPath>..\packages\Mono.Cecil.0.10.4\lib\net40\Mono.Cecil.Pdb.dll</HintPath>
-    </Reference>
-    <Reference Include="Mono.Cecil.Rocks">
-      <HintPath>..\packages\Mono.Cecil.0.10.4\lib\net40\Mono.Cecil.Rocks.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\Flame\Flame.csproj" />
+    <ProjectReference Include="..\Flame.Compiler\Flame.Compiler.csproj" />
+    <PackageReference Include="Mono.Cecil" Version="0.10.4" />
+    <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="CecilAssemblyResolver.cs" />
-    <Compile Include="ClrAccessorDefinition.cs" />
-    <Compile Include="ClrArrayType.cs" />
-    <Compile Include="ClrAssembly.cs" />
-    <Compile Include="ClrFieldDefinition.cs" />
-    <Compile Include="ClrGenericParameter.cs" />
-    <Compile Include="ClrMethodDefinition.cs" />
-    <Compile Include="ClrMethodSignature.cs" />
-    <Compile Include="ClrModifierType.cs" />
-    <Compile Include="ClrPropertyDefinition.cs" />
-    <Compile Include="ClrPropertySignature.cs" />
-    <Compile Include="ClrSubtypingRules.cs" />
-    <Compile Include="ClrTypeDefinition.cs" />
-    <Compile Include="CorlibTypeEnvironment.cs" />
-    <Compile Include="NameConversion.cs" />
-    <Compile Include="ReferenceResolver.cs" />
-    <Compile Include="TypeHelpers.cs" />
-    <Compile Include="Analysis\CilAnalysisContext.cs" />
-    <Compile Include="Analysis\CilExceptionHandler.cs" />
-    <Compile Include="Analysis\CilPrototypeExceptionSpecs.cs" />
-    <Compile Include="Analysis\ClrInstructionSimplifier.cs" />
-    <Compile Include="Analysis\ClrMethodBodyAnalyzer.cs" />
-    <Compile Include="Emit\CilCodegenInstruction.cs" />
-    <Compile Include="Emit\CilInstructionSelector.cs" />
-    <Compile Include="Emit\CilInstructionStreamBuilder.cs" />
-    <Compile Include="Emit\CilPeepholeOptimizer.cs" />
-    <Compile Include="Emit\CilRegisterAllocator.cs" />
-    <Compile Include="Emit\ClrMethodBodyEmitter.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Transforms\CanonicalizeDelegates.cs" />
-    <Compile Include="Transforms\ExpandLinq.cs" />
-    <Compile Include="Transforms\LowerBox.cs" />
-    <Compile Include="Transforms\LowerDelegates.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Flame\Flame.csproj">
-      <Project>{59B6DEC4-F58F-4DDF-835D-5F01B54F517E}</Project>
-      <Name>Flame</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Flame.Compiler\Flame.Compiler.csproj">
-      <Project>{7042BE93-0037-4506-B3D6-7C28774F8AD5}</Project>
-      <Name>Flame.Compiler</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
