--- a/src/Flame.Ir.nuspec
+++ b/src/Flame.Ir.nuspec
@@ -31,7 +31,9 @@
   </metadata>
   <files>
     <file src="..\README.md" target="readme.txt" />
-    <file src="Flame.Ir\bin\Release\Flame.Ir.dll" target="lib\net45\" />
-    <file src="Flame.Ir\bin\Release\Flame.Ir.xml" target="lib\net45\" />
+    <file src="Flame.Ir\bin\Release\net45\Flame.Ir.dll" target="lib\net45\" />
+    <file src="Flame.Ir\bin\Release\netstandard2.0\Flame.Ir.dll" target="lib\netstandard2.0\" />
+    <file src="Flame.Ir\bin\Release\net45\Flame.Ir.xml" target="lib\net45\" />
+    <file src="Flame.Ir\bin\Release\netstandard2.0\Flame.Ir.xml" target="lib\netstandard2.0\" />
   </files>
 </package>
