--- a/src/FlameMacros/FlameMacros.csproj
+++ b/src/FlameMacros/FlameMacros.csproj
@@ -1,80 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{42FA2924-B6DE-48AE-957C-514C37D0D1ED}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>FlameMacros</RootNamespace>
     <AssemblyName>FlameMacros</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug</OutputPath>
-    <DefineConstants>DEBUG;</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release</OutputPath>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
+    <TargetFramework>net45</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Collections.Immutable">
-      <HintPath>..\packages\System.Collections.Immutable.1.5.0\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
-    </Reference>
-    <Reference Include="Loyc.Essentials">
-      <HintPath>..\packages\Loyc.Essentials.26.8.1\lib\net45\Loyc.Essentials.dll</HintPath>
-    </Reference>
-    <Reference Include="Loyc.Collections">
-      <HintPath>..\packages\Loyc.Collections.26.8.1\lib\net45\Loyc.Collections.dll</HintPath>
-    </Reference>
-    <Reference Include="Loyc.Math">
-      <HintPath>..\packages\Loyc.Math.26.8.1\lib\net45\Loyc.Math.dll</HintPath>
-    </Reference>
-    <Reference Include="Loyc.Syntax">
-      <HintPath>..\packages\Loyc.Syntax.26.8.1\lib\net45\Loyc.Syntax.dll</HintPath>
-    </Reference>
-    <Reference Include="Loyc.Ecs">
-      <HintPath>..\packages\Loyc.Ecs.26.8.1\lib\net45\Loyc.Ecs.dll</HintPath>
-    </Reference>
-    <Reference Include="Loyc.Utilities">
-      <HintPath>..\packages\Loyc.Utilities.26.8.1\lib\net45\Loyc.Utilities.dll</HintPath>
-    </Reference>
-    <Reference Include="ICSharpCode.TextEditor">
-      <HintPath>..\packages\LeMP.26.8.1\lib\net45\ICSharpCode.TextEditor.dll</HintPath>
-    </Reference>
-    <Reference Include="LeMP">
-      <HintPath>..\packages\LeMP.26.8.1\lib\net45\LeMP.exe</HintPath>
-    </Reference>
-    <Reference Include="LeMP.StdMacros">
-      <HintPath>..\packages\LeMP.26.8.1\lib\net45\LeMP.StdMacros.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\Flame\Flame.csproj" />
+    <PackageReference Include="Loyc.Collections" Version="26.8.1" />
+    <PackageReference Include="Loyc.Ecs" Version="26.8.1" />
+    <PackageReference Include="Loyc.Essentials" Version="26.8.1" />
+    <PackageReference Include="Loyc.Math" Version="26.8.1" />
+    <PackageReference Include="Loyc.Syntax" Version="26.8.1" />
+    <PackageReference Include="Loyc.Utilities" Version="26.8.1" />
+    <PackageReference Include="LeMP" Version="26.8.1" />
+    <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="InstructionPattern.cs" />
-    <Compile Include="MacroApplicationException.cs" />
-    <Compile Include="PatternMacros.cs" />
-    <Compile Include="RewriteRule.cs" />
-    <Compile Include="Trie.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Flame\Flame.csproj">
-      <Project>{59B6DEC4-F58F-4DDF-835D-5F01B54F517E}</Project>
-      <Name>Flame</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
