--- a/src/Flame.nuspec
+++ b/src/Flame.nuspec
@@ -24,7 +24,7 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="..\README.md" target="readme.txt" />
+    <file src="..\README.md" />
     <file src="Flame.Compiler\bin\Release\net45\Flame.dll" target="lib\net45\" />
     <file src="Flame.Compiler\bin\Release\netstandard2.0\Flame.dll" target="lib\netstandard2.0\" />
     <file src="Flame.Compiler\bin\Release\net45\Flame.xml" target="lib\net45\" />
