--- a/src/Examples/Brainfuck/Brainfuck.csproj
+++ b/src/Examples/Brainfuck/Brainfuck.csproj
@@ -3,7 +3,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>Flame.Brainfuck</RootNamespace>
     <AssemblyName>fbfc</AssemblyName>
-    <TargetFramework>net45</TargetFramework>
+    <TargetFrameworks>net45;netcoreapp2.0</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Flame\Flame.csproj" />
