--- a/src/FlameMacros/FlameMacros.csproj
+++ b/src/FlameMacros/FlameMacros.csproj
@@ -3,7 +3,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>FlameMacros</RootNamespace>
     <AssemblyName>FlameMacros</AssemblyName>
-    <TargetFramework>net45</TargetFramework>
+    <TargetFrameworks>net45;netcoreapp2.0</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Flame\Flame.csproj" />
