--- a/src/ILOpt/ILOpt.csproj
+++ b/src/ILOpt/ILOpt.csproj
@@ -3,7 +3,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>ILOpt</RootNamespace>
     <AssemblyName>ilopt</AssemblyName>
-    <TargetFramework>net45</TargetFramework>
+    <TargetFrameworks>net45;netcoreapp2.0</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Flame\Flame.csproj" />
