--- a/src/Flame.Clr/Flame.Clr.csproj
+++ b/src/Flame.Clr/Flame.Clr.csproj
@@ -6,7 +6,7 @@
     <RootNamespace>Flame.Clr</RootNamespace>
     <AssemblyName>Flame.Clr</AssemblyName>
     <Version>1.0</Version>
-    <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
+    <TargetFrameworks>net45;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
