--- a/src/Flame.Ir/Flame.Ir.csproj
+++ b/src/Flame.Ir/Flame.Ir.csproj
@@ -6,7 +6,7 @@
     <RootNamespace>Flame.Ir</RootNamespace>
     <AssemblyName>Flame.Ir</AssemblyName>
     <Version>1.0</Version>
-    <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
+    <TargetFrameworks>net45;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
