[Travis] Add toolchain test repo to apt sources

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ addons:
   apt:
     sources:
       - llvm-toolchain-trusty-7
+      - ubuntu-toolchain-r-test
     packages:
       # Install LLVM.
       - libllvm7
