--- a/src/Examples/TurboKernels/TurboKernels.csproj
+++ b/src/Examples/TurboKernels/TurboKernels.csproj
@@ -3,8 +3,11 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>TurboKernels</RootNamespace>
     <AssemblyName>TurboKernels</AssemblyName>
-    <TargetFrameworks>net47;netcoreapp2.0</TargetFrameworks>
+    <TargetFrameworks>net47</TargetFrameworks>
   </PropertyGroup>
+  <ItemGroup>
+    <None Include="linux-mono-config/*.dll.config" Link="%(LinkBase)\%(RecursiveDir)%(Filename)%(Extension)" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Flame\Flame.csproj" />
     <ProjectReference Include="..\..\Flame.Compiler\Flame.Compiler.csproj" />
@@ -20,6 +23,6 @@
     <PackageReference Include="Pixie.Loyc" Version="0.1.7" />
     <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
     <PackageReference Include="LLVMSharp" Version="5.0.0" />
-    <PackageReference Include="swigged.cuda" Version="9.2148.3" />
+    <PackageReference Include="ManagedCuda-80" Version="8.0.22" />
   </ItemGroup>
 </Project>
