--- a/src/Flame.Llvm/Flame.Llvm.csproj
+++ b/src/Flame.Llvm/Flame.Llvm.csproj
@@ -5,6 +5,7 @@
     <AssemblyName>Flame.Llvm</AssemblyName>
     <Version>1.0</Version>
     <TargetFrameworks>net47;netstandard2.0;netcoreapp2.0</TargetFrameworks>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="LLVMSharp" Version="5.0.0" />
